Fix float elements wrapping by container

--- a/03/styles/index.css
+++ b/03/styles/index.css
@@ -132,6 +132,8 @@
 
 .parent--float::after {
 	clear: both;
+	content: '';
+	display: block;
 }
 
 .parent--flexbox {
